# td-backtest

./: .gitignore  CLAUDE.md  start.bat
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: backtest.py  candles.py  pnl_backtest.py  screener.py
backend/app/backtest/: engine.py
backend/app/data/: binance.py
backend/app/indicators/: __main__.py  td_countdown.py  td_sequential.py  td_setup.py
backend/app/models/: schemas.py
backend/app/services/: telegram.py
backend/app/ws/: binance_stream.py  manager.py  router.py
backend/tests/: conftest.py  test_cancellation.py  test_countdown.py  test_deferral.py  test_pnl.py  test_recycling.py  test_risk_level.py  test_setup.py
docs/: 01_SPEC.md  02_TD_LOGIC.md  03_BACKTEST.md  04_DATA_MODEL.md  05_ROADMAP.md  06_MANUAL.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/backtest/: ReturnHistogram.tsx  SignalList.tsx  StatsCard.tsx
frontend/components/chart/: CandleChart.tsx
frontend/components/overlays/: markers.ts
frontend/components/pnl/: PnlPanel.tsx
frontend/components/screener/: ScreenerPanel.tsx
frontend/lib/: api.ts  csv.ts  useRealtimeCandle.ts
